# cross-stitch

./: Cargo.toml
data/: average_colors.json  dmc-colors-rgb.json  dmc-gimp-palette.gpl  filename-to-code.json  sorted-codes.txt
palette/: .gitignore  README.md  mix.exs  to-palette.exs
palette/lib/: palette.ex
palette/test/: palette_test.exs
src/: main.rs
swatches/: codes.txt  dmc-colors.json  files.txt  get_average_colors  get_swatches  swatches.txt
