[package]
name = "cross-stitch"
version = "0.1.0"
authors = ["Michael Jones <m.pricejones@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scarlet = "1.0.2"
crossterm = "0.9.6"

